set font size for form inputs to prevent auto-zooming on iOS

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,9 @@ main {
   flex: 1;
   -webkit-flex: 1;
 }
+input[type] {
+  font-size: 16px;
+}
 .c-url {
   padding: 0.5em 1em;
 }
